ajout d'un correctif z-index pour rendre le média github cliquable

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1 span {
     right: -20%;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 1;
 }
 
 ul {
